--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -78,7 +78,33 @@ dependencies {
     implementation deps.hilt.android
     kapt deps.hilt.compiler
 
+    //Testing:
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation('org.robolectric:robolectric:4.4') {
+        exclude group: 'com.google.protobuf'
+    }
+    testImplementation "io.mockk:mockk:1.10.4"
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.0"
+    testImplementation 'org.hamcrest:hamcrest-library:2.2'
+
+    
+    // jUnit 4
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "org.junit.vintage:junit-vintage-engine:5.7.0"
+    testImplementation "androidx.test:core-ktx:1.3.0"
+
+    // jUnit 5
+    def jupiter_version = "5.7.0"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$jupiter_version"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$jupiter_version"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:$jupiter_version"
+
+    def kotest_version = "4.3.2"
+    testImplementation "io.kotest:kotest-runner-junit5:$kotest_version"
+    testImplementation "io.kotest:kotest-assertions-core-jvm:$kotest_version"
+    testImplementation "io.kotest:kotest-property-jvm:$kotest_version"
+    androidTestImplementation "io.kotest:kotest-assertions-core-jvm:$kotest_version"
+    androidTestImplementation "io.kotest:kotest-property-jvm:$kotest_version"
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
