--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -32,6 +32,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -87,7 +90,7 @@ dependencies {
     testImplementation "com.squareup.okhttp3:mockwebserver:4.9.0"
     testImplementation 'org.hamcrest:hamcrest-library:2.2'
 
-    
+
     // jUnit 4
     testImplementation 'junit:junit:4.13.2'
     testImplementation "org.junit.vintage:junit-vintage-engine:5.7.0"
@@ -105,6 +108,19 @@ dependencies {
     testImplementation "io.kotest:kotest-property-jvm:$kotest_version"
     androidTestImplementation "io.kotest:kotest-assertions-core-jvm:$kotest_version"
     androidTestImplementation "io.kotest:kotest-property-jvm:$kotest_version"
+
+    // Testing - Instrumentation
+    androidTestImplementation 'junit:junit:4.13.1'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation 'androidx.test.ext:truth:1.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.work:work-testing:2.5.0'
+    androidTestImplementation "io.mockk:mockk-android:1.10.4"
+    debugImplementation 'androidx.fragment:fragment-testing:1.2.5'
+    debugImplementation 'androidx.test:core-ktx:1.3.0'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
