--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -114,13 +114,16 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    androidTestImplementation 'androidx.test:rules:1.3.0'
+    testImplementation 'androidx.test:rules:1.3.0'
     androidTestImplementation 'androidx.test.ext:truth:1.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.work:work-testing:2.5.0'
     androidTestImplementation "io.mockk:mockk-android:1.10.4"
     debugImplementation 'androidx.fragment:fragment-testing:1.2.5'
     debugImplementation 'androidx.test:core-ktx:1.3.0'
+
+    testImplementation "org.mockito:mockito-core:3.8.0"
+    androidTestImplementation "org.mockito:mockito-android:3.8.0"
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
