--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -109,6 +109,11 @@ dependencies {
     androidTestImplementation "io.kotest:kotest-assertions-core-jvm:$kotest_version"
     androidTestImplementation "io.kotest:kotest-property-jvm:$kotest_version"
 
+    testImplementation "org.slf4j:slf4j-nop:1.7.25"
+
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+
+
     // Testing - Instrumentation
     androidTestImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test:runner:1.3.0'
