--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -83,6 +83,8 @@ dependencies {
 
     //Testing:
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
     testImplementation('org.robolectric:robolectric:4.4') {
         exclude group: 'com.google.protobuf'
     }
