--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,16 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    packagingOptions {
+        exclude "META-INF/DEPENDENCIES"
+        exclude "**/attach_hotspot_windows.dll"
+        exclude "META-INF/licenses/**"
+        exclude "META-INF/AL2.0"
+        exclude "META-INF/LGPL2.1"
+        exclude "META-INF/LICENSE.md"
+        exclude "META-INF/LICENSE-notice.md"
+    }
 }
 
 dependencies {
@@ -81,7 +91,57 @@ dependencies {
     implementation deps.hilt.android
     kapt deps.hilt.compiler
 
+    //Testing:
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
+    testImplementation('org.robolectric:robolectric:4.5.1') {
+        exclude group: 'com.google.protobuf'
+    }
+    testImplementation "io.mockk:mockk:1.10.4"
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.0"
+    testImplementation 'org.hamcrest:hamcrest-library:2.2'
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3"
+
+    // jUnit 4
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "org.junit.vintage:junit-vintage-engine:5.7.0"
+    testImplementation "androidx.test:core-ktx:1.3.0"
+
+    // jUnit 5
+    def jupiter_version = "5.7.0"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$jupiter_version"
+    androidTestImplementation "org.junit.jupiter:junit-jupiter-api:$jupiter_version"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$jupiter_version"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:$jupiter_version"
+
+    def kotest_version = "4.3.2"
+    testImplementation "io.kotest:kotest-runner-junit5:$kotest_version"
+    testImplementation "io.kotest:kotest-assertions-core-jvm:$kotest_version"
+    testImplementation "io.kotest:kotest-property-jvm:$kotest_version"
+    androidTestImplementation "io.kotest:kotest-assertions-core-jvm:$kotest_version"
+    androidTestImplementation "io.kotest:kotest-property-jvm:$kotest_version"
+
+    testImplementation "org.slf4j:slf4j-nop:1.7.25"
+
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+
+
+    // Testing - Instrumentation
+    androidTestImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation 'androidx.test.ext:truth:1.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.work:work-testing:2.5.0'
+    androidTestImplementation "io.mockk:mockk-android:1.10.4"
+    debugImplementation 'androidx.fragment:fragment-testing:1.3.1'
+    debugImplementation 'androidx.test:core-ktx:1.3.0'
+
+    testImplementation "org.mockito:mockito-core:3.8.0"
+    androidTestImplementation "org.mockito:mockito-android:3.8.0"
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
