--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,7 +128,8 @@ dependencies {
 
 
     // Testing - Instrumentation
-    androidTestImplementation 'junit:junit:4.13.2'
+    testImplementation 'junit:junit:4.10'
+    androidTestImplementation 'junit:junit:4.10'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -139,6 +140,12 @@ dependencies {
     androidTestImplementation "io.mockk:mockk-android:1.10.4"
     debugImplementation 'androidx.fragment:fragment-testing:1.3.1'
     debugImplementation 'androidx.test:core-ktx:1.3.0'
+
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test:rules:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+
 
     testImplementation "org.mockito:mockito-core:3.8.0"
     androidTestImplementation "org.mockito:mockito-android:3.8.0"
