--- a/versions.gradle
+++ b/versions.gradle
@@ -6,6 +6,7 @@ versions.google_play_services = "4.3.4"
 versions.kotlin = "1.4.21"
 versions.androidx_core = "1.3.2"
 versions.androidx_appcompat = "1.2.0"
+versions.androidx_fragment = "1.3.2"
 versions.material = "1.2.1"
 versions.androidx_constraint_layout = "2.0.4"
 versions.webrtc = "1.0.32006"
@@ -28,6 +29,7 @@ def deps = [:]
 deps.google_play_services = "com.google.gms:google-services:$versions.google_play_services"
 deps.android_gradle_plugin = "com.android.tools.build:gradle:$versions.android_gradle_plugin"
 deps.androidx_core = "androidx.core:core-ktx:$versions.androidx_core"
+deps.androidx_fragment = "androidx.fragment:fragment-ktx:$versions.androidx_fragment"
 deps.appcompat = "androidx.appcompat:appcompat:$versions.androidx_appcompat"
 deps.material = "com.google.android.material:material:$versions.material"
 deps.constraint_layout = "androidx.constraintlayout:constraintlayout:$versions.androidx_constraint_layout"
