--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -29,7 +29,7 @@ jobs:
 
   ## Build test script
   build:
-    ## needs: [ unit_tests, android_tests ]
+    needs: [ unit_tests, android_tests ]
     runs-on: ubuntu-latest
     steps:
       # 1
