--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -58,4 +58,4 @@ jobs:
       - uses: actions/upload-artifact@master
         with:
           name: mapping.txt
-          path: app/build/outputs/mapping/debug/mapping.txt
+          path: ${{steps.sign_app.outputs.mapping}}
