--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -1,69 +1,53 @@
-## 1
 name: Test and deploy
-
-## Actions that will be executed when you push code currently none
-on:
-  push:
-
-## 2
+'on':
+  push: null
 jobs:
-  ## 3 Unit Test Script
   unit_tests:
-    runs-on: [ubuntu-latest]
+    runs-on:
+      - ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
       - name: Unit tests
         run: ./gradlew test
-  ## 4 Instrument test script
   android_tests:
-    runs-on: [ macos-latest ]
+    runs-on:
+      - macos-latest
     steps:
       - uses: actions/checkout@v2
-
       - name: Instrumentation Tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
           script: ./gradlew connectedAndroidTest
-
-  ## Build test script
   build:
-    ##  needs: [ unit_tests, android_tests ]
     runs-on: ubuntu-latest
     steps:
-      # 1
       - name: Checkout code
         uses: actions/checkout@v2
-      # 2
       - name: Generate Release APK
         run: ./gradlew assembleRelease
-      # 3
       - name: Sign APK
         uses: r0adkll/sign-android-release@v1
-        # ID used to access action output
         id: sign_app
         with:
           releaseDirectory: app/build/outputs/apk/release
-          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-          alias: ${{ secrets.ALIAS }}
-          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-          keyPassword: ${{ secrets.KEY_PASSWORD }}
-      # 4
+          signingKeyBase64: '${{ secrets.SIGNING_KEY }}'
+          alias: '${{ secrets.ALIAS }}'
+          keyStorePassword: '${{ secrets.KEY_STORE_PASSWORD }}'
+          keyPassword: '${{ secrets.KEY_PASSWORD }}'
       - uses: actions/upload-artifact@master
         with:
           name: release.apk
-          path: ${{steps.sign_app.outputs.signedReleaseFile}}
-      # 5
+          path: '${{steps.sign_app.outputs.signedReleaseFile}}'
       - uses: actions/upload-artifact@master
         with:
           name: mapping.txt
           path: app/build/outputs/mapping/debug/mapping.txt
-
   generate_api_docs:
-   needs: [build]
-   runs-on: ubuntu-latest
-   steps:
-        name: Generate API documentation
-        if: ${{github.event_name == 'push'}}
-        run: ./gradlew dokkaHtml
+    needs:
+      - build
+    runs-on: ubuntu-latest
+    steps:
+      name: Generate API documentation
+      if: '${{github.event_name == ''push''}}'
+      run: ./gradlew dokkaHtml
