--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -1,6 +1,6 @@
 name: Test and deploy
 'on':
-  push: null
+  push:
 jobs:
   unit_tests:
     runs-on:
@@ -48,6 +48,6 @@ jobs:
       - build
     runs-on: ubuntu-latest
     steps:
-      name: Generate API documentation
-      if: '${{github.event_name == ''push''}}'
-      run: ./gradlew dokkaHtml
+      - name: Generate API documentation
+        if: '${{github.event_name == ''push''}}'
+        run: ./gradlew dokkaHtml
