--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -47,7 +47,11 @@ jobs:
     needs:
       - build
     runs-on: ubuntu-latest
-    steps:
+    - steps:
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Build and run tests
+        run: ./gradlew build
       - name: Generate API documentation
-        if: '${{github.event_name == ''push''}}'
+        if: ${{github.event_name == 'push'}}
         run: ./gradlew dokkaHtml
