--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -8,68 +8,66 @@ on:
 ## 2
 jobs:
   ## 3 Unit Test Script
-  unit_tests:
-    runs-on: [ubuntu-latest]
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Unit tests
-        run: ./gradlew test
+  #  unit_tests:
+  # runs-on: [ubuntu-latest]
+  # steps:
+  #   - uses: actions/checkout@v2
+  #
+  #   - name: Unit tests
+  #     run: ./gradlew test
   ## 4 Instrument test script
-  android_tests:
-    runs-on: [ macos-latest ]
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Instrumentation Tests
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 29
-          script: ./gradlew connectedAndroidTest
-
+  #android_tests:
+  # runs-on: [ macos-latest ]
+  # steps:
+  #   - uses: actions/checkout@v2
+  #
+  #   - name: Instrumentation Tests
+  #     uses: reactivecircus/android-emulator-runner@v2
+  #     with:
+  #       api-level: 29
+  #       script: ./gradlew connectedAndroidTest
+  #
   ## Build test script
-  build:
-    ##  needs: [ unit_tests, android_tests ]
-    runs-on: ubuntu-latest
-    steps:
-      # 1
-      - name: Checkout code
-        uses: actions/checkout@v2
-      # 2
-      - name: Generate Release APK
-        run: ./gradlew assembleRelease
-      # 3
-      - name: Sign APK
-        uses: r0adkll/sign-android-release@v1
-        # ID used to access action output
-        id: sign_app
-        with:
-          releaseDirectory: app/build/outputs/apk/release
-          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-          alias: ${{ secrets.ALIAS }}
-          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-          keyPassword: ${{ secrets.KEY_PASSWORD }}
+  # build:
+  # ##  needs: [ unit_tests, android_tests ]
+  # runs-on: ubuntu-latest
+  # steps:
+  # #   # 1
+  # - name: Checkout code
+  #     uses: actions/checkout@v2
+  #   # 2
+  #   - name: Generate Release APK
+  # #     run: ./gradlew assembleRelease
+  # # 3
+  #   - name: Sign APK
+  #     uses: r0adkll/sign-android-release@v1
+  #     # ID used to access action output
+  #     id: sign_app
+  #      with:
+  #        releaseDirectory: app/build/outputs/apk/release
+  #        signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+  #        alias: ${{ secrets.ALIAS }}
+  #       keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+  #       keyPassword: ${{ secrets.KEY_PASSWORD }}
       # 4
-      - uses: actions/upload-artifact@master
-        with:
-          name: release.apk
-          path: ${{steps.sign_app.outputs.signedReleaseFile}}
+  #   - uses: actions/upload-artifact@master
+  #     with:
+  #       name: release.apk
+  #       path: ${{steps.sign_app.outputs.signedReleaseFile}}
       # 5
-      - uses: actions/upload-artifact@master
-        with:
-          name: mapping.txt
-          path: app/build/outputs/mapping/debug/mapping.txt
+  #   - uses: actions/upload-artifact@master
+  #     with:
+  #       name: mapping.txt
+  #       path: app/build/outputs/mapping/debug/mapping.txt
 
   generate_api_docs:
-    needs: [build]
+    #   needs: [build]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Build and run tests
-        run: ./gradlew build
       - name: Generate API documentation
         if: ${{github.event_name == 'push'}}
         run: ./gradlew dokkaHtml
