--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -64,16 +64,22 @@ jobs:
     #   needs: [build]
     runs-on: ubuntu-latest
     steps:
+
+
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Grant execute permission for script
+        run: chmod +x ./scripts/setup_env.sh
+
       - shell: bash
         env:
             TELNYX_SIP_USER: ${{ secrets.TELNYX_SIP_USER }}
             TELNYX_SIP_PASSWORD: ${{ secrets.TELNYX_SIP_PASSWORD }}
             TELNYX_SIP_TOKEN: ${{ secrets.TELNYX_SIP_TOKEN }}
         run:  |
-            sh scripts/setup_env.sh -u "$TELNYX_SIP_USER" -p "$TELNYX_SIP_PASSWORD" -t "$TELNYX_SIP_TOKEN"
+            sh /scripts/setup_env.sh -u "$TELNYX_SIP_USER" -p "$TELNYX_SIP_PASSWORD" -t "$TELNYX_SIP_TOKEN"
 
-      - name: Checkout code
-        uses: actions/checkout@v2
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Generate API documentation
