--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -78,7 +78,7 @@ jobs:
             TELNYX_SIP_PASSWORD: ${{ secrets.TELNYX_SIP_PASSWORD }}
             TELNYX_SIP_TOKEN: ${{ secrets.TELNYX_SIP_TOKEN }}
         run:  |
-            sh /scripts/setup_env.sh -u "$TELNYX_SIP_USER" -p "$TELNYX_SIP_PASSWORD" -t "$TELNYX_SIP_TOKEN"
+            sh ./scripts/setup_env.sh -u "$TELNYX_SIP_USER" -p "$TELNYX_SIP_PASSWORD" -t "$TELNYX_SIP_TOKEN"
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
