script changes for github secrets

--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -62,9 +62,8 @@ jobs:
 
   generate_api_docs:
     #   needs: [build]
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
-
 
       - name: Checkout code
         uses: actions/checkout@v2
