--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -17,7 +17,7 @@ jobs:
       run: ./gradlew test
   # 4 Instrument test script
   android_tests:
-    # steps:
+  steps:
     - uses: actions/checkout@v2
 
     - name: Grant execute permission for script
@@ -41,7 +41,7 @@ jobs:
     build:
     needs: [ unit_tests, android_tests ]
     runs-on: ubuntu-latest
-      # steps:
+    steps:
       # 1
       - name: Checkout code
           uses: actions/checkout@v2
