--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -39,50 +39,50 @@ jobs:
         api-level: 29
         script: ./gradlew connectedAndroidTest
 
-    ## Build test script
+    # Build test script
     build:
-    needs: [ unit_tests, android_tests ]
-    runs-on: ubuntu-latest
-    steps:
-      # 1
-      - name: Checkout code
-          uses: actions/checkout@v2
+      needs: [ unit_tests, android_tests ]
+      runs-on: ubuntu-latest
+      steps:
+        # 1
+        - name: Checkout code
+            uses: actions/checkout@v2
 
-            - name: Grant execute permission for script
-              run: chmod +x ./scripts/setup_env.sh
+              - name: Grant execute permission for script
+                run: chmod +x ./scripts/setup_env.sh
 
-            - shell: bash
-              env:
-                TELNYX_SIP_USER: ${{ secrets.TELNYX_SIP_USER }}
-                TELNYX_SIP_PASSWORD: ${{ secrets.TELNYX_SIP_PASSWORD }}
-                TELNYX_SIP_TOKEN: ${{ secrets.TELNYX_SIP_TOKEN }}
-              run:  |
-                sh ./scripts/setup_env.sh -u "$TELNYX_SIP_USER" -p "$TELNYX_SIP_PASSWORD" -t "$TELNYX_SIP_TOKEN"
+              - shell: bash
+                env:
+                  TELNYX_SIP_USER: ${{ secrets.TELNYX_SIP_USER }}
+                  TELNYX_SIP_PASSWORD: ${{ secrets.TELNYX_SIP_PASSWORD }}
+                  TELNYX_SIP_TOKEN: ${{ secrets.TELNYX_SIP_TOKEN }}
+                run:  |
+                  sh ./scripts/setup_env.sh -u "$TELNYX_SIP_USER" -p "$TELNYX_SIP_PASSWORD" -t "$TELNYX_SIP_TOKEN"
 
-          # 2
-          - name: Generate Release APK
-              run: ./gradlew assembleRelease
-          # 3
-          - name: Sign APK
-            uses: r0adkll/sign-android-release@v1
-            # ID used to access action output
-            id: sign_app
+            # 2
+            - name: Generate Release APK
+                run: ./gradlew assembleRelease
+            # 3
+            - name: Sign APK
+              uses: r0adkll/sign-android-release@v1
+              # ID used to access action output
+              id: sign_app
+                with:
+                  releaseDirectory: app/build/outputs/apk/release
+                  signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+                  alias: ${{ secrets.ALIAS }}
+                  keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+                  keyPassword: ${{ secrets.KEY_PASSWORD }}
+            # 4
+            - uses: actions/upload-artifact@master
               with:
-                releaseDirectory: app/build/outputs/apk/release
-                signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-                alias: ${{ secrets.ALIAS }}
-                keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-                keyPassword: ${{ secrets.KEY_PASSWORD }}
-          # 4
-          - uses: actions/upload-artifact@master
-            with:
-              name: release.apk
-              path: ${{steps.sign_app.outputs.signedReleaseFile}}
-          # 5
-          - uses: actions/upload-artifact@master
-            with:
-              name: mapping.txt
-              path: app/build/outputs/mapping/debug/mapping.txt
+                name: release.apk
+                path: ${{steps.sign_app.outputs.signedReleaseFile}}
+            # 5
+            - uses: actions/upload-artifact@master
+              with:
+                name: mapping.txt
+                path: app/build/outputs/mapping/debug/mapping.txt
 
   generate_api_docs:
     needs: [build]
