--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -138,10 +138,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.work:work-testing:2.5.0'
     androidTestImplementation "io.mockk:mockk-android:1.10.4"
-    debugImplementation 'androidx.fragment:fragment-testing:1.3.1'
+    debugImplementation 'androidx.fragment:fragment-testing:1.3.2'
     debugImplementation 'androidx.test:core-ktx:1.3.0'
 
-    testImplementation "org.mockito:mockito-core:3.8.0"
+    testImplementation "org.mockito:mockito-inline:3.8.0"
     androidTestImplementation "org.mockito:mockito-android:3.8.0"
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
