--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -141,6 +141,8 @@ dependencies {
     debugImplementation 'androidx.fragment:fragment-testing:1.3.2'
     debugImplementation 'androidx.test:core-ktx:1.3.0'
 
+    //testImplementation 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
+
     testImplementation "org.mockito:mockito-inline:3.8.0"
     androidTestImplementation "org.mockito:mockito-android:3.8.0"
 
