--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -33,8 +33,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
@@ -140,8 +140,6 @@ dependencies {
     androidTestImplementation "io.mockk:mockk-android:1.10.4"
     debugImplementation 'androidx.fragment:fragment-testing:1.3.2'
     debugImplementation 'androidx.test:core-ktx:1.3.0'
-
-    //testImplementation 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
 
     testImplementation "org.mockito:mockito-inline:3.8.0"
     androidTestImplementation "org.mockito:mockito-android:3.8.0"
