--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -11,6 +11,14 @@ jobs:
         with:
           java-version: 1.8
       - name: Publish package
+
+          - shell: bash
+              env:
+                GPR_USR: ${{ secrets.GPR_USR }}
+                GPR_KEY: ${{ secrets.GPR_KEY }}
+              run: |
+                sh ./scripts/apply_github_credentials.sh -u "$GPR_USR" -k "$GPR_KEY"
+
         run: gradle -Pversion=${{ github.event.release.tag_name }} build publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
