--- a/versions.gradle
+++ b/versions.gradle
@@ -38,6 +38,7 @@ deps.webrtc = "org.webrtc:google-webrtc:$versions.webrtc"
 deps.gson = "com.google.code.gson:gson:$versions.gson"
 deps.websocket = "org.java-websocket:Java-WebSocket:$versions.websocket"
 deps.okhttp = "com.squareup.okhttp3:okhttp:$versions.okhttp"
+deps.interceptor = "com.squareup.okhttp3:logging-interceptor:$versions.okhttp"
 deps.timber = "com.jakewharton.timber:timber:$versions.timber"
 deps.dexter = "com.karumi:dexter:$versions.dexter"
 deps.firebasebom = "com.google.firebase:firebase-bom:$versions.firebasebom"
