--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -114,6 +114,7 @@ dependencies {
     implementation deps.ktor.gson
     implementation deps.ktor.websockets
     implementation deps.ktor.okhttp
+    implementation 'androidx.lifecycle:lifecycle-process:2.3.1'
     testImplementation deps.ktor.client_test
 
     // Volley
