--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -4,7 +4,7 @@ name: Test, deploy and generate docs
 
 ## Actions that will be executed when you push code currently none
 on:
-  push:
+  workflow_dispatch:
 
 ## 2
 jobs:
