--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -19,7 +19,7 @@ jobs:
 
   # 4 Instrument test script
   android_tests:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
 
@@ -42,7 +42,7 @@ jobs:
     # Build test script
   build:
     needs: [unit_tests, android_tests]
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       # 1
       - name: Checkout code
