--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -36,7 +36,10 @@ jobs:
       - name: Instrumentation Tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 29
+          api-level: 30
+          target: google_apis
+          profile: Pixel 3a
+          disable-animations: true
           script: ./gradlew connectedAndroidTest
 
     # Build test script
