--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -1,7 +1,6 @@
 name: Publish package to GitHub Packages
 on:
-  release:
-      types: [created]
+  workflow_dispatch:
 jobs:
   publish:
     runs-on: ubuntu-latest
