--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     implementation deps.constraint_layout
 
     // SDK:
-    implementation project(':telnyxRTC')
+    implementation project(':telnyx_rtc')
 
     implementation deps.webrtc
 
