--- a/versions.gradle
+++ b/versions.gradle
@@ -22,6 +22,7 @@ versions.googleservices = "4.3.4"
 versions.volley = "1.1.1"
 versions.firebasebom = "26.3.0"
 versions.hilt = "2.35.1"
+versions.bugsnag = "5.+"
 
 ext.versions = versions
 
@@ -44,6 +45,7 @@ deps.dexter = "com.karumi:dexter:$versions.dexter"
 deps.firebasebom = "com.google.firebase:firebase-bom:$versions.firebasebom"
 deps.firebase_analytics = "com.google.firebase:firebase-analytics-ktx"
 deps.firebase_messaging = "com.google.firebase:firebase-messaging-ktx"
+deps.bugsnag = "com.bugsnag:bugsnag-android:$versions.bugsnag"
 
 def kotlin = [:]
 kotlin.plugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
