--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,7 @@ dependencies {
 
     implementation deps.hilt.android
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-inappmessaging-display:19.0.3'
     kapt deps.hilt.compiler
 
     //Testing:
