[WEBRTC-644] Github actions test adjustments

--- a/.github/workflows/scheduled_test.yml
+++ b/.github/workflows/scheduled_test.yml
@@ -5,24 +5,14 @@ on:
     - cron:  '*/30 5,17 * * *'
 
 jobs:
-  android_tests:
+  # 1 Run unit tests
+  unit_tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
-      - name: Grant execute permission for script
-        run: chmod +x ./scripts/setup_env.sh
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
 
-      - shell: bash
-        env:
-          TELNYX_SIP_USER: ${{ secrets.TELNYX_SIP_USER }}
-          TELNYX_SIP_PASSWORD: ${{ secrets.TELNYX_SIP_PASSWORD }}
-          TELNYX_SIP_TOKEN: ${{ secrets.TELNYX_SIP_TOKEN }}
-        run: |
-          sh ./scripts/setup_env.sh -u "$TELNYX_SIP_USER" -p "$TELNYX_SIP_PASSWORD" -t "$TELNYX_SIP_TOKEN"
-      - name: Instrumentation Tests
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 30
-          profile: Nexus 6
-          script: ./gradlew connectedAndroidTest
+      - name: Unit tests
+        run: ./gradlew test
