[WEBRTC-644] chmod before test

--- a/.github/workflows/unit_test_on_push.yml
+++ b/.github/workflows/unit_test_on_push.yml
@@ -14,5 +14,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
       - name: Unit tests
         run: ./gradlew test
