--- a/.github/workflows/firebase_test_lab.yml
+++ b/.github/workflows/firebase_test_lab.yml
@@ -29,8 +29,8 @@ jobs:
       # 1
       - name: Checkout code
 
-      - name: Touch local properties
-        run: touch local.properties
+        # - name: Touch local properties
+      #   run: touch local.properties
 
       - uses: actions/checkout@v1
       - name: Set up JDK 1.8
