--- a/.github/workflows/unit_test_on_push.yml
+++ b/.github/workflows/unit_test_on_push.yml
@@ -17,21 +17,15 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
-      - name: Access MOCK_USERNAME
-        env:
-          TELNYX_SIP_USER: ${{ secrets.TELNYX_SIP_USER }}
-        run: echo MOCK_USERNAME=\"MOCK_USERNAME\" > ./local.properties
+      - name: Grant execute permission for script
+          run: chmod +x ./scripts/update_properties.sh
 
-      - name: Access MOCK_PASSWORD
-        env:
-          TELNYX_SIP_PASSWORD: ${{ secrets.TELNYX_SIP_PASSWORD }}
-        run: echo MOCK_PASSWORD=\"MOCK_PASSWORD\" > ./local.properties
+      - name: Print Login Params Values
+        run: |
+          bash update_properties.sh ${{ secrets.TELNYX_SIP_USER }} ${{ secrets.TELNYX_SIP_PASSWORD }}
 
       - name: Assemble app debug APK
         run: bash ./gradlew assembleDebug --stacktrace
-
-        #  - name: Touch local properties
-      #   run: touch local.properties
 
       - name: Unit tests
         run: ./gradlew test
