[WEBRTC-644] Fix script reference

--- a/.github/workflows/unit_test_on_push.yml
+++ b/.github/workflows/unit_test_on_push.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Print Login Params Values
         run: |
-          bash ./scripts/setup_env.sh ${{ secrets.TELNYX_SIP_USER }} ${{ secrets.TELNYX_SIP_PASSWORD }}
+          bash ./scripts/update_properties.sh ${{ secrets.TELNYX_SIP_USER }} ${{ secrets.TELNYX_SIP_PASSWORD }}
 
       - name: Assemble app debug APK
         run: bash ./gradlew assembleDebug --stacktrace
